--- a/languages/sqstorage.pot
+++ b/languages/sqstorage.pot
@@ -1,5 +1,15 @@
+#, fuzzy
 msgid ""
-msgstr "Content-Type: text/plain; charset=UTF-8\n"
+msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.3\n"
 
 #: templates//categories.tpl:1 templates//categories.tpl:9
 #: templates//datafields.tpl:147 templates//php_language_extract.tpl:33
@@ -29,7 +39,7 @@ msgstr ""
 msgid "Gegenstand"
 msgstr ""
 "#-#-#-#-#  sqstorage.pot  #-#-#-#-#\n"
-"#-#-#-#-#  tsmarty2cq10YvJ  #-#-#-#-#\n"
+"#-#-#-#-#  tsmarty2ctDsFJF  #-#-#-#-#\n"
 
 #: templates//categories.tpl:11 templates//categories.tpl:18
 #: templates//inventory.tpl:17 templates//inventory.tpl:92
@@ -565,7 +575,7 @@ msgstr ""
 msgid "Position"
 msgstr ""
 "#-#-#-#-#  sqstorage.pot  #-#-#-#-#\n"
-"#-#-#-#-#  tsmarty2cq10YvJ  #-#-#-#-#\n"
+"#-#-#-#-#  tsmarty2ctDsFJF  #-#-#-#-#\n"
 
 #: templates//inventory.tpl:17 templates//inventory.tpl:92
 #: templates//inventory.tpl:163
@@ -715,6 +725,10 @@ msgstr ""
 
 #: templates//accessdenied.tpl:1
 msgid "Zugriff verweigert"
+msgstr ""
+
+#: templates//login.tpl:1
+msgid "Login und Registrierung"
 msgstr ""
 
 #: templates//login.tpl:32
