--- a/languages/locale/en_GB/messages.po
+++ b/languages/locale/en_GB/messages.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.4.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: templates//accessdenied.tpl:1
@@ -362,7 +362,7 @@ msgstr "Really remove picture?"
 msgid "Fehler"
 msgstr "Error"
 
-#: templates//installpage.tpl:1
+#: templates//installpage.tpl:1 templates//settings.tpl:149
 msgid "Installation"
 msgstr "Installation"
 
@@ -424,7 +424,7 @@ msgstr "Enter credentials"
 msgid "Datenbank installieren / aktualisieren"
 msgstr "Install / update database"
 
-#: templates//installpage.tpl:103
+#: templates//installpage.tpl:103 templates//php_language_extract.tpl:89
 msgid "Erneut prüfen"
 msgstr "Check again"
 
@@ -868,6 +868,80 @@ msgstr "Access to the following directories was denied:"
 msgid "Unter Linux könnten folgende Befehle weiterhelfen"
 msgstr "If your operating system is Linux the following command may help you"
 
+#: templates//php_language_extract.tpl:82
+#, fuzzy
+#| msgid "mit verknüpften Altdaten entfernt."
+msgid "1 Datensatz mit verknüpften Altdaten entfernt."
+msgstr "remove together with linked old records."
+
+#: templates//php_language_extract.tpl:83
+msgid "1 Eintrag wurde gelöscht."
+msgstr "1 entry was deleted."
+
+#: templates//php_language_extract.tpl:84
+#, fuzzy
+#| msgid "mit verknüpften Altdaten entfernt."
+msgid "Datensätze mit verknüpften Altdaten entfernt."
+msgstr "remove together with linked old records."
+
+#: templates//php_language_extract.tpl:85
+msgid "Die Installation ist momentan nicht erlaubt"
+msgstr "Installation is currently not allowed"
+
+#: templates//php_language_extract.tpl:86
+msgid "Einträge wurden gelöscht."
+msgstr "Entries were deleted."
+
+#: templates//php_language_extract.tpl:87
+#, fuzzy
+#| msgid "Einzelwert: Zeichenfolge mit bis zu < 512 Zeichen"
+msgid "Einzelwert: Zeichenfolge mit bis zu < 256 Zeichen"
+msgstr "Single value: String with less than 512 character"
+
+#: templates//php_language_extract.tpl:88
+#, fuzzy
+#| msgid "Fehler: E-Mail-Adresse \"%s\" ungültig."
+msgid "E-Mail-Adresse ungültig!"
+msgstr "Error: Invalid email address \"%s\"."
+
+#: templates//php_language_extract.tpl:90
+msgid ""
+"Erstelle eine Datei mit dem Namen allow_install im Verzeichnis support um "
+"die Installation zu erlauben."
+msgstr ""
+"Create a file named \"allow_install\" in the support directory to allow "
+"installation."
+
+#: templates//php_language_extract.tpl:91
+#, fuzzy
+#| msgid "Der letzte Administrator kann nicht gelöscht werden!"
+msgid "Fehler: Der letzte Administrator kann nicht gelöscht werden!"
+msgstr "The last administrator cannot be deleted!"
+
+#: templates//php_language_extract.tpl:92
+#, fuzzy
+#| msgid ""
+#| "Setze die entsprechende Berechtigung so, dass Dein Webserver diese "
+#| "erstellen und bearbeiten kann oder erstelle die Datei manuell und gewähre "
+#| "darauf Schreibrechte für den Webserver"
+msgid ""
+"Setze die entsprechende Berechtigung so, dass Dein Webserver diese erstellen "
+"und bearbeiten kann"
+msgstr ""
+"Please set the file access permissions to allow your webserver to create and "
+"edit the file or create the file manually and grant write permission to the "
+"webserver "
+
+#: templates//php_language_extract.tpl:93
+msgid ""
+"Verwendest Du eine bestehende Installation und die Benutzerverwaltung, "
+"kannst Du diese Datei als Administrator über das Einstellungen erstellen und "
+"nach der Aktualisierung auch wieder entfernen."
+msgstr ""
+"If you are about to updating an existing installation and also using the "
+"login feature, you can create this file in the Settings and also delete it "
+"afterwards."
+
 #: templates//settings.tpl:16
 msgid "zur Datenbank hinzugefügt"
 msgstr "added to the database"
@@ -909,15 +983,29 @@ msgstr "deactivate"
 msgid "aktivieren"
 msgstr "activate"
 
-#: templates//settings.tpl:135
+#: templates//settings.tpl:135 templates//settings.tpl:160
 msgid "Einstellungen speichern"
 msgstr "Save settings"
 
-#: templates//settings.tpl:155
+#: templates//settings.tpl:144
+#, fuzzy
+#| msgid "sqStorage Installation / Aktualiserung"
+msgid "Installation und Aktualisierung"
+msgstr "sqStorage Installation / Update"
+
+#: templates//settings.tpl:153
+msgid "verbieten"
+msgstr "deny"
+
+#: templates//settings.tpl:157
+msgid "erlauben"
+msgstr "allow"
+
+#: templates//settings.tpl:181
 msgid "Benutzer wirklich entfernen?"
 msgstr "Really remove the user?"
 
-#: templates//settings.tpl:155
+#: templates//settings.tpl:181
 msgid "Der letzte Administrator kann nicht gelöscht werden!"
 msgstr "The last administrator cannot be deleted!"
 
